# ChangeLog for media-video/kdenlive
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/kdenlive/ChangeLog,v 1.36 2009/02/01 18:34:21 scarabeus Exp $

  01 Feb 2009; Tomas Chvatal <scarabeus@gentoo.org> kdenlive-0.7.2.ebuild:
  Ease deps a bit.

*kdenlive-0.7.2 (01 Feb 2009)

  01 Feb 2009; Alexis Ballier <aballier@gentoo.org> +kdenlive-0.7.2.ebuild:
  version bump, bug #257258

  30 Jan 2009; Alexis Ballier <aballier@gentoo.org>
  -files/kdenlive-0.7-avcodeclink.patch, -kdenlive-0.7.ebuild:
  remove old

*kdenlive-0.7.1 (12 Jan 2009)

  12 Jan 2009; Alexis Ballier <aballier@gentoo.org> +kdenlive-0.7.1.ebuild:
  version bump

  04 Jan 2009; Tomas Chvatal <scarabeus@gentoo.org> kdenlive-0.7.ebuild:
  Fix missing kde4-base_src_prepare call.

  19 Dec 2008; Alexis Ballier <aballier@gentoo.org> kdenlive-0.7.ebuild:
  It requires mlt to be built with sdl support, by Lorenz Quack
  <don@amberfisharts.com>, bug #251074

*kdenlive-0.7 (13 Nov 2008)

  13 Nov 2008; Alexis Ballier <aballier@gentoo.org>
  +files/kdenlive-0.7-avcodeclink.patch, +kdenlive-0.7.ebuild:
  version bump

  19 Oct 2008; Alexis Ballier <aballier@gentoo.org> kdenlive-0.5.ebuild:
  adjust deps for 0.5 version that only works with mlt < 0.3

*kdenlive-0.7_beta1 (16 Oct 2008)

  16 Oct 2008; Alexis Ballier <aballier@gentoo.org>
  +kdenlive-0.7_beta1.ebuild:
  Version bump, thanks to Tomáš Chvátal and for the ebuild and
  jmbsvicetto for the help on the missing kdebase-data dep. Bug #241712.

  12 Jul 2008; Alexis Ballier <aballier@gentoo.org> kdenlive-0.5.ebuild:
  Check for xml useflag on mlt, thanks to Flyser <hoacha@quantentunnel.de>,
  bug #225015.

  12 May 2008; Alexis Ballier <aballier@gentoo.org>
  +files/kdenlive-0.5-iec61883_automagic.patch, kdenlive-0.5.ebuild:
  Fix automagic on libiec61883 by Olivier Huber <oli.huber@gmail.com>, bug
  #220095

  12 May 2008; Alexis Ballier <aballier@gentoo.org> -kdenlive-0.4.ebuild: