@@ -1,6 +1,4 @@
-DIST kdenlive-0.7.1.tar.gz 1693051 RMD160 a89194263049e3e938ec0d60e3c0121c5515f73f SHA1 7ad74d7c0c73073fc4da0d8eefc45a5c86c752a2 SHA256 a4fa1e9b3d1bc3c047c3617bf213cac8a4a84d2a883a766641f7fb4e9085aa77
-DIST kdenlive-0.7.2.tar.gz 3628474 RMD160 aa2247615e6928091f9c864d4ab8d84a02a159ca SHA1 5e4ef0238321515e6f5ecd3e97b414486d3749a5 SHA256 1d45388b8e5d3fd79433e0e2a34175764466c217539985fab59887b3eaf37981
-EBUILD kdenlive-0.7.1.ebuild 738 RMD160 b1cc84e7d7e25156e94e7a00fa189d75b6ff50c2 SHA1 e6c0f93c956c82b5f279aee13d4ff8cce1217d46 SHA256 fc6e87967f1ecaea51e89962d6c7e691a844b4e971054c91314f34730e17dec1
-EBUILD kdenlive-0.7.2.ebuild 767 RMD160 fcc44fa4538307cb9da72ec4907fc3853306407c SHA1 82212a1d2fcc6956f2b6c6281923fe2b11092582 SHA256 4777ca43896fd6f22e4cf6f05f167bc0fc222dec3d9b229c4729f097de5bd5cb
-MISC ChangeLog 5527 RMD160 da3d501c26afee45dd4593a8fea4f60df5efb4c1 SHA1 b8ea7d78280728041dec9a8f2b2c9a210659d994 SHA256 e08e37d31947995509e511b31406559f6a997f4cb32e304cbd1af28ef27bc75c
+DIST kdenlive-0.7.2.1.tar.gz 1796307 RMD160 def3a3d43e685c9c9652e8956d561cc11478450d SHA1 9d7f269a285a7c2c821de734bc8eb6054c14d849 SHA256 5254e949b5637c0b7794d1b8dc95ff5f88164ddbbaa596679635e7e12fbb51dd
+EBUILD kdenlive-0.7.2.1.ebuild 769 RMD160 98cffddeba2855f52007436e795716fadf9c5578 SHA1 ee6db6f2a3a4a18799849debbd29007199ca6926 SHA256 190de936bfa82f93e4004080bcd1e442925d19d71a0dff73b50ec898b74a1d3e
+MISC ChangeLog 5745 RMD160 099287a3b7813e64de844b7d48d55b70234ee6db SHA1 5eeac1ed714fbd68d68ef05352bcd24acd488fb3 SHA256 9aa1ab23bf42c452d7d74c6beba2034d4543f8413629dd4a9a00a19e5d89c00b
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
