@@ -14,6 +14,7 @@ DIST nvidia-settings-177.68.tar.gz 1344390 RMD160 a4292aef4797d750b96319763fa0e7
 DIST nvidia-settings-177.70.tar.gz 1344394 RMD160 96984a2107572f64613f982dc7855cb2e1abbfd7 SHA1 3ceaa75b898b3ac73f9d0c1edc9ad3e8b631e002 SHA256 34a86e8379094ebf142dd58c226f721ba9d0142ce9434b8cf4f480a488c6797c
 DIST nvidia-settings-177.80.tar.gz 1345105 RMD160 d42c90249e778466dc84a914406eb239b4285012 SHA1 4af1bc8f15e8dd13bc4a8307455c43e989a0344b SHA256 84507802377c970f4a38bf1298746d1ab503023db1390e5bad95b84f3568a42d
 DIST nvidia-settings-180.22.tar.gz 1341769 RMD160 e52df6cdb92e9ebbd83259da124a608c7d3bf870 SHA1 cbd8fe8e7e72393af3a3349f16ad64fad2d46021 SHA256 67dfc7927b2a25308e862fafbba239ad5c0038eff653013243356bb93c619229
+DIST nvidia-settings-180.27.tar.gz 1342103 RMD160 a013637b8e4ad283837e04606ab67cb5882ccb4c SHA1 68e69e0128b11035fddfc70ac1e7d80590f0a5bd SHA256 fb80c40dd64f5e4a3d7d14fc6aa404508cddddec914092b350eed55e4762dec2
 EBUILD nvidia-settings-1.0.20070621.ebuild 2637 RMD160 cc704bf040019f2d2fa8eff32239483dc5dd30a9 SHA1 c26f1286497cace473844839f8dacb86b434e5d3 SHA256 7d78f627f72981551a6cc6e044bcd8678eed7898f14c0a88bb488d36117a464d
 EBUILD nvidia-settings-169.04.ebuild 2761 RMD160 417f23a62cf7c7bb778f9162661bda4f9db2af08 SHA1 95ae04c9fae947b85c9a7fd701ddb8da7ad9cd1f SHA256 1e44f87afbb91f1e9d8e84e30577b09f09d46c9604283a25dd80b61fc61fa5b0
 EBUILD nvidia-settings-169.07.ebuild 2620 RMD160 2f3662720c05adcb3f87ca58d9b662972b531343 SHA1 b228b8dbc43a38dfe681ee86d502f0e8bd08ebc5 SHA256 b52442c9c1c9c0d85875773aa4038710b4321a03b9ffac66bc008ce12f432ebb
@@ -27,5 +28,6 @@ EBUILD nvidia-settings-177.68.ebuild 1863 RMD160 287b0f1120d0d0766e3f751a2177565
 EBUILD nvidia-settings-177.70.ebuild 1863 RMD160 58a49a34bbd0cb29ec42e3b404da6d1d259ac5dc SHA1 e8324de5330027ce9d2507b75493cd9923f9ecf7 SHA256 b9c2a62755fd9fb34cc94a68509ad147ba440b2a05c956f39ac9fa28bab5aeeb
 EBUILD nvidia-settings-177.80.ebuild 1863 RMD160 e9d98319915372844e14cf7462973e49ed949d25 SHA1 bce201ce79fd41d5bfda1e598900d3aa72121b50 SHA256 4f54d3dca1adba8a8770c8684ab5cc46a1696de3fd6fe7c68850477e536ec9fa
 EBUILD nvidia-settings-180.22.ebuild 1863 RMD160 21744105950ba8457e8688a6dc1c311135842c48 SHA1 fe4e33792d25304297e1351d986c689337cfdbf3 SHA256 7e39332049efc1aa771b4d7d3d23d0e5f01bab9921cb4eac184558141d42bde3
-MISC ChangeLog 9905 RMD160 b007eee8ba6da556a0e02ae02edffd370d7be3fd SHA1 4504293963b01afea4c53be385edda664d1f4fd3 SHA256 61daf9d0257d56cff635ede07675b2880bdd11dcdcd1cef40f6208a347cb4de8
+EBUILD nvidia-settings-180.27.ebuild 1863 RMD160 39e0b5e8f48a5feebc99a5aaf4639293ec34dacd SHA1 5bf8037ce0543d0f151f7aef150b3a2882844f39 SHA256 6fca0672ebd3abe4cf5b6208acb3c36f772f81234fe5d1b13cf175ea47b43297
+MISC ChangeLog 9988 RMD160 a38ea222d18010a3db3ce694ce1db4507222c955 SHA1 f0d8dc3bb5641816feca16ab56777150c6d32da4 SHA256 d3818e0f2f2fb8945d4cf170637e15b31bce05ba97429c4ce3584c26d565ab0c
 MISC metadata.xml 312 RMD160 3f48a9c5af3729238ee2b7b7d8079095593a074a SHA1 a554ca74853c83d3895b1bb65a3489ecc54bd2c7 SHA256 4c5ee3ae30dc1353639de923975c1adbba82362c167dd60b8a90a192085c1fb3
