@@ -1,6 +1,12 @@
 # ChangeLog for media-video/kdenlive
 # Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/kdenlive/ChangeLog,v 1.36 2009/02/01 18:34:21 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/kdenlive/ChangeLog,v 1.37 2009/02/08 21:24:06 scarabeus Exp $
+
+*kdenlive-0.7.2.1 (08 Feb 2009)
+
+  08 Feb 2009; Tomas Chvatal <scarabeus@gentoo.org> -kdenlive-0.7.1.ebuild,
+  -kdenlive-0.7.2.ebuild, +kdenlive-0.7.2.1.ebuild:
+  Remove old, Bump new, fixes bugs #257999 and #258000.
 
   01 Feb 2009; Tomas Chvatal <scarabeus@gentoo.org> kdenlive-0.7.2.ebuild:
   Ease deps a bit.
